RESOLVED FIXED246891
CSSPerspective.toMatrix() should throw if its length is not compatible with 'px' unit
https://bugs.webkit.org/show_bug.cgi?id=246891
Summary CSSPerspective.toMatrix() should throw if its length is not compatible with '...
Chris Dumez
Reported 2022-10-21 16:22:38 PDT
CSSPerspective.toMatrix() should throw a TypeError if its length is not compatible with 'px' unit: - https://drafts.css-houdini.org/css-typed-om-1/#dom-csstransformcomponent-tomatrix
Attachments
Chris Dumez
Comment 1 2022-10-21 16:25:42 PDT
EWS
Comment 2 2022-10-22 10:28:24 PDT
Committed 255876@main (02ba20dc48a2): <https://commits.webkit.org/255876@main> Reviewed commits have been landed. Closing PR #5659 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-22 10:29:18 PDT
Note You need to log in before you can comment on or make changes to this bug.